Sculpt-mode's "Box Hide + Undo" not syncing in edit mode but instead causes edges to disappear #72700

Closed
opened 2019-12-26 08:23:57 +01:00 by irex124 · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-25 23:32, hash: fa5e28ab08
Worked: (optional)

Short description of error
In sculpt-mode, when I hide parts of mesh with Box Hide tool, undo that action and go into edit mode, the undo isn't synchronized but the edges that were hidden before undo in sculpt mode are not shown..

Exact steps for others to reproduce the error

  1. Add a UV Sphere or any other mesh and go into sculpt mode.
  2. Select the Box Hide tool and hide a part of the sphere.
  3. Undo the action and go into edit mode.

Box hide undo bug 1.mp4
Box hide undo bug 1.2.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-25 23:32, hash: `fa5e28ab08` Worked: (optional) **Short description of error** In sculpt-mode, when I hide parts of mesh with Box Hide tool, undo that action and go into edit mode, the undo isn't synchronized but the edges that were hidden before undo in sculpt mode are not shown.. **Exact steps for others to reproduce the error** 1. Add a UV Sphere or any other mesh and go into sculpt mode. 2. Select the Box Hide tool and hide a part of the sphere. 3. Undo the action and go into edit mode. [Box hide undo bug 1.mp4](https://archive.blender.org/developer/F8244803/Box_hide_undo_bug_1.mp4) [Box hide undo bug 1.2.mp4](https://archive.blender.org/developer/F8244818/Box_hide_undo_bug_1.2.mp4)
Author

Added subscriber: @Pasang

Added subscriber: @Pasang
Pablo Dobarro self-assigned this 2019-12-26 23:47:54 +01:00

This issue was referenced by 04ddd6f717

This issue was referenced by 04ddd6f717d51fc40ef6436c33f60d206b0c70b2

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72700
No description provided.